# openCVTest

./: CMakeLists.txt  LICENSE  README.md  main.cpp  main_bak.cpp  test.cpp  test.h
